--- a/TutorialAndDevGuide/Tutorial/LogicExample.tex
+++ b/TutorialAndDevGuide/Tutorial/LogicExample.tex
@@ -1,5 +1,5 @@
 \section{Logic Libraries}~\label{sec:logic} 
 
-\todo{Lauren, please add some text about the logic libraries maybe just a short example of the earlier LTL libraries and some explanation and examples of the librarie MTL libraries you added} 
+\todo{Lauren, please add some text about the logic libraries maybe just a short example of the earlier LTL libraries and some explanation and examples of the  MTL libraries you added} 
 
 
