--- a/GAJaloyan/conference/expose.tex
+++ b/GAJaloyan/conference/expose.tex
@@ -239,7 +239,7 @@ int max (int x, int y) { return (x > y) ? x : y; }
 	
 \begin{frame}[fragile]
 	\frametitle{Floyd-Hoare logic}
-	Here is an example of a proof tree of a program\footnote{A. Min\'e, \textit{“Semantics and application to program verification : Axiomatic semantics”}, 2015.}:
+	Here is an example of a proof tree of a program\footnote{A. Min\'e, \textit{"Semantics and application to program verification : Axiomatic semantics"}, 2015.}:
 	\[
 	\inferrule* []
 	{\inferrule* [] {\inferrule* [] {\inferrule* [] { }
@@ -976,7 +976,7 @@ $d_{cpa} (\textbf{s},\textbf{v}) = \parallel \textbf{s} + t_{cpa}(\textbf{s}, \t
 	
 	
 	\begin{itemize}
-		\item Prover mode : 2140 files verified in 17 min.
+		\item Prover mode : 2140 files verified in 17 min
 		\item Compiler mode : 262 files compiled in 10 sec
 	\end{itemize}
 	
