--- a/GAJaloyan/conference/expose.tex
+++ b/GAJaloyan/conference/expose.tex
@@ -1000,6 +1000,7 @@ $d_{cpa} (\textbf{s},\textbf{v}) = \parallel \textbf{s} + t_{cpa}(\textbf{s}, \t
 \begin{frame}
 	\frametitle{What's next ?}
 	\begin{enumerate}
+		\item Code refactoring, writing documentation
 		\item Add more cases for unit testing of WCV
 		\item Test the WCV in a real situation (fall 2015)
 		\item Find other new applications
