--- a/TutorialAndDevGuide/Tutorial/Tools.tex
+++ b/TutorialAndDevGuide/Tutorial/Tools.tex
@@ -239,6 +239,33 @@ The trigger has been evoked!
 \end{code}
 %
 
-\subsection{Correcness of the generated code}
+\subsection{Correctness of the generated code}~\label{sec:correctness} 
 
-\todo{George-Axel} describe what must be done to invoke the provers. 
+\subsubsection{Frama-c}~\label{subsec:frama-c} 
+For this, make sure the following is installed:
+
+\begin{itemize}
+	\item GNU parallel
+	\item frama-c
+	\item why3 
+	\item cvc4 prover
+\end{itemize}
+
+You can generate C code optimized for frama-c by using the \texttt{proofACSL} function from SBV.Compile (instead of \texttt{compile} as shown in \ref{sec:compiling}). 
+Then, compile and generate the C source code (which should be in the \texttt{copilot-sbv-codegen} folder). Go into that folder and just run \texttt{make fwp} to use frama-c with the WP plugin. This should generate two log files : a first exhaustive one called \texttt{logfwp}, and an other which summaries the former which is called \texttt{logfwpcompact}. 
+
+It is also possible to run frama-c with the value analysis plugin by running \texttt{make fval}. Be careful, the value analysis plugin requires to preload all the C sources files together, which requires a lot of RAM memory for big projects.
+
+\subsubsection{Splint}~\label{subsec:splint} 
+
+If you have splint installer on your computer, you can also try running splint (with the command \texttt{make splint}), which will be a good starting point for manual code optimization or refactoring.
+
+\subsubsection{Dot}~\label{subsec:dot} 
+
+It is also possible to generate dot graphs for each C source file generated, in order to make the files more understandable. For this, you should check that you have dot installed.
+Extract the dot code from a C source file, and then just run \texttt{dot -Tps code.gv -o code.ps} \footnote{A script doing that automatically is provided here https://raw.githubusercontent.com/Copilot-Language/examplesForACSL/master/WCV/scriptdot.cpp}.
+
+
+\subsection{Cross compiling}~\label{sec:cross} 
+
+If you go in the \texttt{copilot-sbv-codegen} folder, and run make all inside it, it should generate a archive file named \texttt{internal.a}, using the compiler defined in the file \texttt{copilot.mk} (default is compcert). This can create some problems during the linking process if you change the compiler for the final compilation (typically \texttt{gcc -m32 -lm main.c internal.a} where \texttt{main.c} is where your controller code is). For this purpose, we recommend installing first the cross compiler (example \texttt{arm-none-eabi-gcc}), and compile the \textbf{whole} project using that very same compiler. 
