--- a/TutorialAndDevGuide/Tutorial/tutorial.tex
+++ b/TutorialAndDevGuide/Tutorial/tutorial.tex
@@ -35,6 +35,11 @@
 \usepackage[margin=2cm]{geometry}
 \usepackage[titletoc]{appendix}
 \usepackage{bcprules}
+\usepackage{tikz}
+\usepackage{pgf}
+\usetikzlibrary{arrows,automata}
+\usepackage{tikz-cd}
+\usetikzlibrary{positioning}
 % boxes around figs
 \usepackage{float}
 \floatstyle{boxed} 
