--- a/GAJaloyan/conference/expose.tex
+++ b/GAJaloyan/conference/expose.tex
@@ -980,7 +980,7 @@ $d_{cpa} (\textbf{s},\textbf{v}) = \parallel \textbf{s} + t_{cpa}(\textbf{s}, \t
 		\item Compiler mode : 262 files compiled in 10 sec
 	\end{itemize}
 	
-	A unit test was written for the generated code in C99, with some test cases provided.
+	A unit test was written for the generated code in C99, with some test cases provided. But those scenarii are only involving two planes that are in violation.
 	
 \end{frame}
 
