--- a/TutorialAndDevGuide/Tutorial/WellClearExample.tex
+++ b/TutorialAndDevGuide/Tutorial/WellClearExample.tex
@@ -15,3 +15,15 @@ One application that suits well to the Copilot language is the monitoring of vio
 
 \todo{Put here some WellClear stuff}.
 
+Do not forget:
+
+\begin{itemize}
+	\item m4
+	\item no let binding (everything in functions)
+	\item magic labels
+	\item following the PVS model (show examples on how close it is). Except for the arrays (HUGE mux stack).
+	\item magic makefile
+	\item cross compilation on windows
+	\item writing the main associated with.
+	\item making it work.
+\end{itemize}
