Slightly prettier todos.

--- a/TutorialAndDevGuide/Tutorial/tutorial.tex
+++ b/TutorialAndDevGuide/Tutorial/tutorial.tex
@@ -5,7 +5,8 @@
 %\usepackage{a4wide}
 %\setlength{\columnsep}{1cm}
 
-\newcommand{\todo}[1]{{\bf \Huge !!!!! #1 !!!!!}}
+%\newcommand{\todo}[1]{{\bf \Huge !!!!! #1 !!!!!}}
+\usepackage[textsize=footnotesize]{todonotes}
 %\usepackage[british]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage{url}
@@ -16,7 +17,7 @@
 \usepackage{setspace}
 \onehalfspacing
 \usepackage{framed}
-\usepackage[usenames,dvipsnames]{color}
+%\usepackage[usenames,dvipsnames]{color}
 \usepackage[titles]{tocloft}
 \setlength{\cftbeforesecskip}{0.1ex}
 \renewcommand{\cftsecfont}{\rm}
