--- a/TutorialAndDevGuide/Tutorial/WellClearExample.tex
+++ b/TutorialAndDevGuide/Tutorial/WellClearExample.tex
@@ -1,6 +1,6 @@
 \section{Well Clear Example}~\label{sec:WellClear}
 
-\todo{Here we will add a detailed description of well clear example}
+\todo[inline]{Here we will add a detailed description of well clear example}
 
 \begin{itemize}
 \item Intro to the problem of monitoring aircraft
@@ -11,9 +11,11 @@
 \item what we had to do to run on ground station. 
 \end{itemize}
 
-One application that suits well to the Copilot language is the monitoring of violations of separation criteria between two planes. We decided to implement the Well-Clear criterion as an example of practical use.
+One application that suits well to the Copilot language is the monitoring of
+violations of separation criteria between two planes. We decided to implement
+the Well-Clear criterion as an example of practical use.
 
-\todo{Put here some WellClear stuff}.
+\todo[inline]{Put here some WellClear stuff}.
 
 Do not forget:
 
